syntax = "proto3";

package spot_proto;

// ENUMS

enum SpotRequestType {
    CREATE_ORDERBOOK = 0;
    MARKET_ORDER = 1;
    LIMIT_ORDER = 2;
    UPDATE_ORDER = 3;
    CANCEL_ORDER = 4;
}

enum SpotEventType {
    ORDER_NEW = 0;
    ORDER_FILL = 1;
    ORDER_PARTIAL_FILL = 2;
    ORDER_UPDATE = 3;
    ORDER_CANCEL = 4;
}

// REQUESTS

message CreateOrderbookRequest {
    uint64 base_asset_id = 1;
    uint64 quote_asset_id = 2;
}

message MarketOrderRequest {
    uint64 base_asset_id = 1;
    uint64 quote_asset_id = 2;
    uint64 side = 3;
    uint64 quantity = 4;
}

message LimitOrderRequest {
    uint64 base_asset_id = 1;
    uint64 quote_asset_id = 2;
    uint64 side = 3;
    uint64 price = 4;
    uint64 quantity = 5;
}

message UpdateOrderRequest {
    uint64 base_asset_id = 1;
    uint64 quote_asset_id = 2;
    uint64 side = 3;
    uint64 price = 4;
    uint64 quantity = 5;
    uint64 order_id = 6;
}

message CancelOrderRequest {
    uint64 base_asset_id = 1;
    uint64 quote_asset_id = 2;
    uint64 side = 3;
    uint64 order_id = 4;
}

// EVENTS

message SpotOrderNewEvent {
    bytes account = 1;
    uint64 order_id =2;
    uint64 side = 3;
    uint64 price = 4;
    uint64 quantity = 5;
}

message SpotOrderFillEvent {
    bytes account = 1;
    uint64 order_id =2;
    uint64 side = 3;
    uint64 price = 4;
    uint64 quantity = 5;
}

message SpotOrderPartialFillEvent {
    bytes account = 1;
    uint64 order_id =2;
    uint64 side = 3;
    uint64 price = 4;
    uint64 quantity = 5;
}

message SpotOrderUpdateEvent {
    bytes account = 1;
    uint64 order_id =2;
    uint64 side = 3;
    uint64 price = 4;
    uint64 quantity = 5;
}

message SpotOrderCancelEvent {
    bytes account = 1;
    uint64 order_id =2;
}