syntax = "proto3";

package spot_requests;

// ENUMS

enum SpotRequestType {
    CREATE_ORDERBOOK = 0;
    MARKET_ORDER = 1;
    LIMIT_ORDER = 2;
    UPDATE_ORDER = 3;
    CANCEL_ORDER = 4;
}

// REQUESTS

message CreateOrderbookRequest {
    uint64 base_asset_id = 1;
    uint64 quote_asset_id = 2;
}

message MarketOrderRequest {
    uint64 base_asset_id = 1;
    uint64 quote_asset_id = 2;
    uint64 side = 3;
    uint64 quantity = 4;
}

message LimitOrderRequest {
    uint64 base_asset_id = 1;
    uint64 quote_asset_id = 2;
    uint64 side = 3;
    uint64 price = 4;
    uint64 quantity = 5;
}

message UpdateOrderRequest {
    uint64 base_asset_id = 1;
    uint64 quote_asset_id = 2;
    uint64 side = 3;
    uint64 price = 4;
    uint64 quantity = 5;
    uint64 order_id = 6;
}

message CancelOrderRequest {
    uint64 base_asset_id = 1;
    uint64 quote_asset_id = 2;
    uint64 side = 3;
    uint64 order_id = 4;
    bytes market_admin = 5;
}